			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03f: *********************************

IMP: (09/02/05, DN) Speed up redisplay:
  1) Don't use slow Math.round in databaseToScreen .
  2) Don't initialize temporary EditWindow when create PixelDrawing for subcell.

BUG: (09/02/05, SMR) Zero width arcs are drawn incorrectly (Bugs #521 & #522).
FIX: Incorrect optimization of zero-width arcs repaired.

IMP/MAN (09/01/05, JKG) Simple Parasitic Extraction from layout for spice

IMP: (09/01/05, SMR) Speed up redisplay.

IMP: (08/31/05, SMR) EDIF I/O configuration now handles global name conversion.

************************* Version 8.03e: *********************************

IMP: (08/30/05, SMR) Initial changes to speed up redisplay when small amounts change.

IMP/MAN: (08/29/05, SMR) Improved EDIF I/O (and the "edif.cfg" file) for Cadence compatiblity.

BUG: (08/29/05, SMR) Drawing transparent layers from a technology other than the current
     produces an error and fails to draw the layers (Bug #500).
FIX: In PixelDrawing.java, convert the transparent layers to opaque layers.

BUG: (08/29/05, SMR) Closing a library is prevented if instances from it are in the clipboard (Bug #504).
FIX: Clear the clipboard in such situations.

IMP/MAN (08/30/05, GVG) Changes in DRC documentation to deal with Bug #496

IMP: (08/27/05, DN) Connections of NodeInst are sorted by port index. This speeds
    up PortInst.getConnections() method in case of cell instances with many exports.

IMP/IMP: (08/27/05, GVG) Option under ERRORS in Explorer Tree to delete all loggers at once.

BUG: (08/26/05, SMR) When editing "down in place", double-clicks from explorer fail (Bug #506).
FIX: In EditWindow.setCell(), must set in-place bit properly.

IMP: (08/26/05, SMR) When cycling through errors, if selected objects are not visible,
     screen shifts to them
