@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.03f: *********************************
 
+BUG: (09/2/05, GVG) Exception in Cell information if no DRC was run (no Bugzilla)
+FIX: DRC.getActiveBits() needs Technology as parameter.
+
 IMP: (09/02/05, DN) Speed up redisplay:
   1) Don't use slow Math.round in databaseToScreen .
   2) Don't initialize temporary EditWindow when create PixelDrawing for subcell.
